--- a/templates/layout.header.latte
+++ b/templates/layout.header.latte
@@ -79,13 +79,13 @@
               <ul class="list-unstyled mb-0">
                 <li>
                   <a class="d-block py-2 px-5 text-decoration-none text-dark {$linkActivo === 'avisos' ? 'active fw-bold'}"
-                     href="/avisos.php">Avisos</a></li>
+                     href="/publicaciones/avisos.php">Avisos</a></li>
                 <li>
                   <a class="d-block py-2 px-5 text-decoration-none text-dark {$linkActivo === 'noticias' ? 'active fw-bold'}"
-                     href="/noticias.php">Noticias</a></li>
+                     href="/publicaciones/noticias.php">Noticias</a></li>
                 <li>
                   <a class="d-block py-2 px-5 text-decoration-none text-dark {$linkActivo === 'gestiones' ? 'active fw-bold'}"
-                     href="/gestiones.php">Gestiones</a></li>
+                     href="/publicaciones/gestiones.php">Gestiones</a></li>
               </ul>
             </div>
           </li>
@@ -133,7 +133,8 @@
                              href="/aplicacion/transparencia/ahorro-altruista.php">Ahorro altruista</a></li>
                       <li><a class="d-block py-2 px-5 ps-5 text-decoration-none text-dark small"
                              href="/aplicacion/transparencia/cuotas-voluntarias.php">Cuotas voluntarias</a></li>
-                      <li><a class="d-block py-2 px-5 ps-5 text-decoration-none text-dark small" href="/gestiones.php">Gestiones</a>
+                      <li><a class="d-block py-2 px-5 ps-5 text-decoration-none text-dark small"
+                             href="/publicaciones/gestiones.php">Gestiones</a>
                       </li>
                       <li><a class="d-block py-2 px-5 ps-5 text-decoration-none text-dark small"
                              href="/transparencia.php">Normativos</a></li>
@@ -210,9 +211,9 @@
             Publicaciones
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/avisos.php">Avisos</a></li>
-            <li><a class="dropdown-item" href="/noticias.php">Noticias</a></li>
-            <li><a class="dropdown-item" href="/gestiones.php">Gestiones</a></li>
+            <li><a class="dropdown-item" href="/publicaciones/avisos.php">Avisos</a></li>
+            <li><a class="dropdown-item" href="/publicaciones/noticias.php">Noticias</a></li>
+            <li><a class="dropdown-item" href="/publicaciones/gestiones.php">Gestiones</a></li>
           </ul>
         </li>
 
@@ -253,7 +254,7 @@
                 </li>
                 <li><a class="dropdown-item" href="/aplicacion/transparencia/cuotas-voluntarias.php">Cuotas
                     voluntarias</a></li>
-                <li><a class="dropdown-item" href="/gestiones.php">Gestiones</a></li>
+                <li><a class="dropdown-item" href="/publicaciones/gestiones.php">Gestiones</a></li>
                 <li><a class="dropdown-item" href="/transparencia.php">Normativos</a></li>
               </ul>
             </li>
